--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
         "sockjs": "^0.3.21",
         "sockjs-client": "^1.5.0",
         "string-replace-webpack-plugin": "^0.1.3",
+        "universal-cookie": "^4.0.4",
         "uuid": "^8.3.0"
     },
     "devDependencies": {
