--- a/package.json
+++ b/package.json
@@ -87,8 +87,10 @@
         "cors": "^2.8.5",
         "cross-env": "^7.0.2",
         "dotenv": "^8.2.0",
+        "engine.io-parser": "^4.0.1",
         "express": "^4.17.1",
         "history": "^4.10.1",
+        "http": "^0.0.1-security",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.12",
         "passport": "^0.4.1",
@@ -101,14 +103,17 @@
         "react-redux": "^7.2.1",
         "react-refresh": "^0.8.3",
         "react-router-dom": "^5.2.0",
+        "react-uuid": "^1.0.2",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
+        "socket.io": "^3.0.1",
+        "socket.io-client": "^3.0.1",
         "sockjs": "^0.3.21",
         "sockjs-client": "^1.5.0",
         "string-replace-webpack-plugin": "^0.1.3",
         "universal-cookie": "^4.0.4",
-        "uuid": "^8.3.0"
+        "uuid": "^8.3.1"
     },
     "devDependencies": {
         "@hot-loader/react-dom": "^16.13.0",
