added razval functional

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
         "passport-jwt": "^4.0.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
+        "react-calendar": "^3.2.1",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.1.0",
         "react-hot-loader": "^4.12.21",
