--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
         "react-redux": "^7.2.1",
         "react-refresh": "^0.8.3",
         "react-router-dom": "^5.2.0",
+        "react-to-print": "^2.12.0",
         "react-toastify": "^6.1.0",
         "react-uuid": "^1.0.2",
         "redux": "^4.0.5",
