--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
         "sockjs-client": "^1.5.0",
         "string-replace-webpack-plugin": "^0.1.3",
         "universal-cookie": "^4.0.4",
-        "uuid": "^8.3.1"
+        "uuid": "^8.3.1",
+        "xlsx": "^0.16.9"
     },
     "devDependencies": {
         "@hot-loader/react-dom": "^16.13.0",
