--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.12",
         "mongoose-sequence": "^5.3.0",
+        "node-fetch": "^2.6.1",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "prop-types": "^15.7.2",
