--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
         "dotenv": "^8.2.0",
         "engine.io-parser": "^4.0.1",
         "express": "^4.17.1",
+        "file-saver": "^2.0.5",
         "history": "^4.10.1",
         "http": "^0.0.1-security",
         "jsonwebtoken": "^8.5.1",
