--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "build": "cross-env npm run clean && webpack --config webpack.production.config.js --progress --profile --colors",
         "lint": "eslint ./client/**/**.js ./server/**/**.js ",
         "prettier": "prettier ./client/**/**.js ./server/**/**.js --write ",
+        "reinstall": "pm2 stop all && git pull && yarn build && pm2 start all",
         "lint:server": "eslint ./server/**/**.js",
         "test": "jest",
         "test:watch": "jest --watch",
