--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "engine.io-parser": "^4.0.1",
         "express": "^4.17.1",
         "file-saver": "^2.0.5",
+        "fix-date": "^1.1.6",
         "history": "^4.10.1",
         "http": "^0.0.1-security",
         "jsonwebtoken": "^8.5.1",
