--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Node.js CD
+name: Deploy-CD
 
 # Controls when the action will run. 
-on: [workflow_run]
+on: [workflow_call]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
