--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,10 @@
 name: Deploy-CD
 
 # Controls when the action will run. 
-on: [workflow_call]
+on:
+  pull_request:
+    branches:
+      - 'main'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
