--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,5 +26,5 @@ jobs:
         password: ${{ secrets.SSH_PASSWORD }}
         port: 22
         script: |
-          cd ~/var/www/autodom-crm
+          cd /var/www/autodom-crm
           yarn reinstall
