--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,4 +25,4 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.SSH_PASSWORD }}
         port: 22
-        script: 'cd /var/www/autodom-crm && ./server_deploy.sh'
+        script: 'cd /var/www/autodom-crm && server_deploy.sh'
