--- a/.github/workflows/deploy-cd.yml
+++ b/.github/workflows/deploy-cd.yml
@@ -6,6 +6,10 @@ name: Deploy
 
 on: workflow_dispatch
 
+defaults:
+  run:
+    working-directory: /var/www/autodom-crm
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -22,5 +26,4 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.SSH_PASSWORD }}
         port: 22
-    - working-directory: /var/www/autodom-crm
     - run: yarn reinstall
