--- a/.github/workflows/deploy-cd.yml
+++ b/.github/workflows/deploy-cd.yml
@@ -26,6 +26,9 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.SSH_PASSWORD }}
         port: 22
+    - name: Go to directory...
+      run: cd /var/www/autodom-crm
     - name: Build app
       uses: borales/actions-yarn@v4
-      run: yarn reinstall
+      with:
+        cmd: reinstall # will run `yarn reinstall` command
