--- a/.github/workflows/deploy-cd.yml
+++ b/.github/workflows/deploy-cd.yml
@@ -8,7 +8,7 @@ on: workflow_dispatch
 
 defaults:
   run:
-    working-directory: /var/www/autodom-crm
+    working-directory: /autodom-crm
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -26,8 +26,6 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.SSH_PASSWORD }}
         port: 22
-    - name: Go to directory...
-      run: cd /var/www/autodom-crm
     - name: Build app
       uses: borales/actions-yarn@v4
       with:
