--- a/.github/workflows/deploy-cd.yml
+++ b/.github/workflows/deploy-cd.yml
@@ -8,7 +8,7 @@ on: workflow_dispatch
 
 defaults:
   run:
-    working-directory: /autodom-crm
+    working-directory: autodom-crm
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
