--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
         "fix-date": "^1.1.6",
         "history": "^4.10.1",
         "http": "^0.0.1-security",
+        "http-proxy-middleware": "^3.0.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.12",
         "mongoose-sequence": "^5.3.0",
