--- a/.eslintrc
+++ b/.eslintrc
@@ -78,7 +78,7 @@
     "max-classes-per-file": "warn",
     "react/jsx-props-no-spreading": ["off"],
     "camelcase": "off",
-    "no-plusplus": [2, { "allowForLoopAfterthoughts": true }]
-
+    "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
+    "no-nested-ternary": "off"
   }
 }
