--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "test:watch": "jest --watch",
         "coverage": "jest --coverage",
         "next:build": "next",
-        "watch:server": "nodemon --legacy-watch start.js --watch server --watch client --exec \"npm run lint:server  --scripts-prepend-node-path && node\"",
+        "watch:server": "nodemon --legacy-watch start.js --watch server --exec \"npm run lint:server  --scripts-prepend-node-path && node\"",
         "build:prod": "cross-env NODE_ENV=production webpack --config webpack.production.config.js --progress --profile --colors",
         "build:ssr": "cross-env NODE_ENV=production webpack --config webpack.ssr.config.js --progress --profile --colors",
         "heroku-postbuild": "yarn run build:prod",
