--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "0.0.3",
     "description": "Autodom CRM",
     "main": "index.js",
+    "engines": {
+        "node": ">=22.0.0",
+        "npm": ">=10.0.0"
+    },
     "scripts": {
         "docker-start-dev": "docker-compose -f \"docker\\DEV.docker-compose.yml\" up",
         "docker-stop-dev": "docker-compose -f \"docker\\DEV.docker-compose.yml\" down",
@@ -12,7 +16,7 @@
         "start:dev": "webpack-dev-server --mode development --config ./webpack.development.config.js --open",
         "start": "cross-env NODE_ENV=production && node start.js",
         "clean": "rimraf dist",
-        "build": "cross-env npm run clean && webpack --config webpack.production.config.js --progress --profile --colors",
+        "build": "cross-env npm run clean && webpack --config webpack.production.config.js --progress --profile",
         "lint": "eslint ./client/**/**.js ./server/**/**.js ",
         "prettier": "prettier ./client/**/**.js ./server/**/**.js --write ",
         "reinstall": "git pull && npm run build && pm2 restart all",
@@ -22,8 +26,8 @@
         "coverage": "jest --coverage",
         "next:build": "next",
         "watch:server": "nodemon --legacy-watch start.js --watch server --exec \"npm run lint:server  --scripts-prepend-node-path && node\"",
-        "build:prod": "cross-env NODE_ENV=production webpack --config webpack.production.config.js --progress --profile --colors",
-        "build:ssr": "cross-env NODE_ENV=production webpack --config webpack.ssr.config.js --progress --profile --colors",
+        "build:prod": "cross-env NODE_ENV=production webpack --config webpack.production.config.js --progress --profile",
+        "build:ssr": "cross-env NODE_ENV=production webpack --config webpack.ssr.config.js --progress --profile",
         "heroku-postbuild": "yarn run build:prod",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
@@ -72,7 +76,7 @@
         "@babel/runtime": "^7.11.2",
         "axios": "^0.21.0",
         "babel-core": "7.0.0-bridge.0",
-        "babel-eslint": "10.1.0",
+        "@babel/eslint-parser": "^7.23.0",
         "babel-jest": "^26.3.0",
         "babel-loader": "^8.1.0",
         "babel-plugin-css-modules-transform": "^1.6.2",
@@ -80,7 +84,7 @@
         "babel-polyfill": "^6.26.0",
         "babel-preset-react-boilerplate": "1.1.1",
         "babel-preset-react-hmre": "1.1.1",
-        "bcrypt-nodejs": "^0.0.3",
+        "bcrypt": "^5.1.1",
         "body-parser": "^1.19.0",
         "classnames": "^2.2.6",
         "connected-react-router": "^6.8.0",
@@ -123,7 +127,7 @@
         "socket.io-client": "^3.0.1",
         "sockjs": "^0.3.21",
         "sockjs-client": "^1.5.0",
-        "string-replace-webpack-plugin": "^0.1.3",
+        "string-replace-loader": "^2.3.0",
         "universal-cookie": "^4.0.4",
         "uuid": "^8.3.1",
         "xlsx": "^0.16.9"
@@ -144,19 +148,19 @@
         "child_process": "^1.0.2",
         "copy-webpack-plugin": "^6.1.0",
         "cron": "^1.8.2",
-        "css-loader": "4.2.2",
-        "cssnano": "^4.1.10",
+        "css-loader": "^6.8.1",
+        "cssnano": "^6.0.1",
         "emotion-theming": "^10.0.27",
-        "eslint": "^7.8.1",
-        "eslint-config-airbnb": "18.2.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-loader": "4.0.2",
-        "eslint-plugin-import": "2.22.0",
-        "eslint-plugin-jsx-a11y": "6.3.1",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "7.20.6",
-        "eslint-plugin-react-hooks": "^4.1.0",
-        "file-loader": "6.1.0",
+        "eslint": "^8.56.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-webpack-plugin": "^4.0.1",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-prettier": "^5.1.2",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "file-loader": "^6.2.0",
         "git-revision-webpack-plugin": "^3.0.6",
         "glob": "^7.1.6",
         "hard-source-webpack-plugin": "^0.13.1",
@@ -168,12 +172,12 @@
         "lodash": "^4.17.21",
         "mini-css-extract-plugin": "^0.11.0",
         "node-hot-loader": "^1.20.0",
-        "node-sass": "^4.14.1",
+        "sass": "^1.69.0",
         "nodemailer": "^6.7.2",
         "nodemon": "^2.0.4",
-        "optimize-css-assets-webpack-plugin": "^5.0.4",
-        "postcss-import": "^12.0.1",
-        "postcss-preset-env": "^6.7.0",
+        "css-minimizer-webpack-plugin": "^5.0.1",
+        "postcss": "^8.4.31",
+        "postcss-loader": "^7.3.3",
         "prettier": "^2.1.1",
         "raw-loader": "^4.0.1",
         "react-addons-test-utils": "^15.6.2",
@@ -184,10 +188,10 @@
         "tailwindcss": "^1.8.3",
         "terser-webpack-plugin": "^4.1.0",
         "thread-loader": "^2.1.3",
-        "url-loader": "4.1.0",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0",
+        "url-loader": "^4.1.1",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1",
         "webpack-shell-plugin": "^0.5.0",
         "zip-lib": "^0.7.2"
     },
