--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       - auto-crm-network
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./docker/nginx/domain.conf:/etc/nginx/conf.d/domain.conf:ro
 
 volumes:
   mongodb_data:
