--- a/.dockerignore
+++ b/.dockerignore
@@ -4,8 +4,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment files
-.env
+# Environment files (keeping .env for Docker)
 .env.local
 .env.development.local
 .env.test.local
