--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
       - auto-crm-network
     volumes:
       - ./uploads:/app/uploads
-      - ./.env:/app/.env:rw
+      - env_file:/app/.env
 
   # Nginx Reverse Proxy
   nginx:
@@ -64,6 +64,8 @@ services:
 
 volumes:
   mongodb_data:
+    driver: local
+  env_file:
     driver: local
 
 networks:
