--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -6,13 +6,7 @@ server {
     listen 80 default_server;
     server_name _;
 
-    # Serve static files
-    location / {
-        root /app/dist;
-        try_files $uri $uri/ @backend;
-    }
-
-    # API routes
+    # API routes - должны идти первыми
     location /api/ {
         proxy_pass http://backend;
         proxy_set_header X-Real-IP $remote_addr;
@@ -42,12 +36,21 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Fallback to backend
-    location @backend {
-        proxy_pass http://backend;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    # Serve static files and handle SPA routing
+    location / {
+        root /app/dist;
+        try_files $uri $uri/ /index.html;
+        
+        # Add headers for SPA
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires "0";
+    }
+
+    # Handle HTML5 History API fallback
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        root /app/dist;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
     }
 }
