--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "core-js": "^3.6.5",
         "cors": "^2.8.5",
         "cross-env": "^7.0.2",
+        "dayjs": "^1.11.13",
         "dead-exports": "^1.0.13",
         "dotenv": "^8.2.0",
         "engine.io-parser": "^4.0.1",
