--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -77,4 +77,9 @@ server {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
+
+    location /index.html {
+        root   /app/dist;
+        add_header Cache-Control "no-cache";
+    }
 }
